--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   box-sizing: border-box;
-  font: normal 100%/1.3 Ubuntu, sans-serif;
+  font: normal 100%/1.3, sans-serif;
 }
 
 *, *::before, *::after {
@@ -36,18 +36,16 @@ nav a:hover {
   color: #fff;
 }
 
-header h1 {
+h1 {
   text-align: center;
-  font-size: 2rem;
-  color: #fff;
-  font-weight: bold;
-  margin: .9rem;
+  font-size: 1.5rem;
+  margin: 0 0 .5rem;
 }
 
 header {
-  background-color: #18294f;
-  padding: .5em;
-  color: #fff;
+  background-color: #ccc;
+  padding: .5em 0;
+  text-align: center;
 }
 
 nav ul {
@@ -60,54 +58,62 @@ nav ul {
 }
 
 nav li {
-  width: 100%;
+text-align: left;
+}
+
+nav a {
+  display: block;
+  padding: .5em .75em;
+  color: #333;
+  text-decoration: none;
+}
+
+nav a:hover {
+  background-color: #333;
+  color: #fff;
 }
 
 @media only screen and (min-width: 25em) {
 
-  nav li {
-    width: 50%;
+nav li {
+    display: inline-block;
     text-align: center;
   }
-
 }
 
 @media only screen and (min-width: 38em) {
-
-  nav li {
-    width: 25%;
-  }
-
   html {
     font-size: 110%;
     line-height: 1.4;
   }
-
 }
 
 @media only screen and (min-width: 60em) {
-
-  header {
-    justify-content: space-between;
-    display: flex;
-    align-items: center;
-  }
-
-  nav li {
-    width: auto;
-  }
-
   html {
     font-size: 120%;
     line-height: 1.5;
   }
 
+  header {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    text-align: left;
+  }
+
+  h1,
+  nav {
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  h1 {
+    margin-bottom: 0;
+    margin-right: 1.5rem;
+  }
 }
 
 @media only screen and (min-width: 90em) {
-
   html {
     font-size: 130%;
   }
-
 }
