--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   box-sizing: border-box;
-  font: normal 100%/1.3, sans-serif;
+  font: normal 100%/1.3 sans-serif;
 }
 
 *, *::before, *::after {
@@ -25,15 +25,9 @@ body {
 
 nav a {
   text-decoration: none;
-  color: #6c8fe0;
   padding: .5em .75em;
   display: block;
-  white-space: nowrap;
-}
-
-nav a:hover {
-  background-color: #6c8fe0;
-  color: #fff;
+  color: #333;
 }
 
 h1 {
@@ -58,14 +52,7 @@ nav ul {
 }
 
 nav li {
-text-align: left;
-}
-
-nav a {
-  display: block;
-  padding: .5em .75em;
-  color: #333;
-  text-decoration: none;
+  text-align: left;
 }
 
 nav a:hover {
@@ -75,20 +62,24 @@ nav a:hover {
 
 @media only screen and (min-width: 25em) {
 
-nav li {
+  nav li {
     display: inline-block;
     text-align: center;
   }
+
 }
 
 @media only screen and (min-width: 38em) {
+
   html {
     font-size: 110%;
     line-height: 1.4;
   }
+
 }
 
 @media only screen and (min-width: 60em) {
+
   html {
     font-size: 120%;
     line-height: 1.5;
@@ -110,10 +101,13 @@ nav li {
     margin-bottom: 0;
     margin-right: 1.5rem;
   }
+
 }
 
 @media only screen and (min-width: 90em) {
+
   html {
     font-size: 130%;
   }
+
 }
